✅ Phase 4: Budget Alerts System - Complete
Implemented comprehensive budget alert system with email notifications, automated budget checking, and daily cost tracking.

**Email Notification Service (email.service.ts):**
- Nodemailer integration with SMTP support
- Handlebars templating for HTML emails
- Template loading and compilation
- Email verification and error handling
- Currency formatting helpers
- Methods: sendBudgetAlert, sendOverBudgetAlert, sendDailyCostSummary

**Email Templates (3 professional HTML templates):**
1. budget-alert.hbs (Budget threshold alerts)
   - Gradient header design
   - Alert levels: info, warning, critical
   - Progress bars with color indicators
   - Budget stats grid (4 cards)
   - Actionable recommendations
   - Responsive mobile design

2. over-budget-alert.hbs (Critical over-budget notifications)
   - Red gradient critical theme
   - Large overage amount highlight
   - Urgent action checklist
   - Emergency contact information
   - Mobile-optimized layout

3. daily-cost-summary.hbs (Daily cost reports)
   - Daily/MTD/Average cost metrics
   - Top services table
   - Quick links and tips
   - Professional branding

**Database Migration (003_add_budget_alerts_table.sql):**
- budget_alerts table for alert history
- Tracks: alert_type, alert_level, percentage_used, email_sent
- 5 indexes for query performance
- Helper functions:
  - should_send_budget_alert (prevents duplicates within 24h)
  - get_alert_statistics (reporting)

**Budget Alert Model (BudgetAlert.ts):**
- createBudgetAlert, getUserAlerts, getBudgetAlerts
- shouldSendAlert (duplicate prevention)
- markAlertAsSent
- getAlertStatistics
- deleteOldAlerts (data retention)

**Budget Alerts Service (budget-alerts.service.ts):**
- checkBudgetsAndSendAlerts (main orchestrator)
- sendThresholdAlert (approaching budget limit)
- sendOverBudgetAlert (exceeded budget)
- sendDailyCostSummary (daily reports)
- Automatic budget status calculation
- Days left in month calculation
- Ale

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,13 @@ ENCRYPTION_KEY=your_32_character_encryption_key_change_this
 
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:3001,http://localhost:19006
+
+# Email Configuration (for budget alerts and notifications)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-specific-password
+EMAIL_FROM=AWS Centralized Management <your-email@gmail.com>
+
+# Cron Jobs Configuration
+ENABLE_CRON_JOBS=true
