--- a/backend/package.json
+++ b/backend/package.json
@@ -19,28 +19,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "@aws-sdk/client-ec2": "^3.478.0",
-    "@aws-sdk/client-s3": "^3.478.0",
-    "@aws-sdk/client-rds": "^3.478.0",
     "@aws-sdk/client-cost-explorer": "^3.478.0",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
+    "@aws-sdk/client-ec2": "^3.478.0",
+    "@aws-sdk/client-rds": "^3.478.0",
+    "@aws-sdk/client-s3": "^3.478.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "handlebars": "^4.7.8",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
-    "@types/pg": "^8.10.9",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.5",
+    "@types/pg": "^8.10.9",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
